<resources>

    <string name="take_picture">Take picture</string>
    <string name="app_name">PropertyManagment</string>
    <string name="signup">SignUp</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>

    <string name="alerts">Alerts</string>
    <string name="properties">Properties</string>
    <string name="tenants">Tenants</string>
    <string name="vendors">Vendors</string>
    <string name="documents">Documents</string>
    <string name="trips">Trips</string>
    <string name="to_do_list">To-Do List</string>
    <string name="collect_rent">Collect Rent</string>
    <string name="transactions">Transactions</string>
    <string name="log_in">Log In</string>
    <string name="login">LogIn</string>
    <string name="signup_here">SignUp here!</string>
    <string name="action_share">Share</string>
    <string name="str_login">Login</string>
    <string name="str_signup">SignUp</string>
    <string name="str_email">Email</string>
    <string name="str_password">Password</string>
    <string name="str_enter_valid_email">Invalid Email</string>
    <string name="str_enter_password">Invalid Password</string>
    <string name="str_password_must_be_same">Password does not match</string>
    <string name="str_confirm_password">Confirm password</string>
    <string name="str_phone">Phone</string>
    <string name="str_i_accept">I accept terms and conditions</string>
    <string name="str_invalid_phone_number">Invalid phone number</string>
    <string name="str_signup_success">Great! You are ready to SignUp.</string>
    <string name="str_please_accept">Please accept terms and conditions</string>
    <string name="str_share">Share</string>
    <string name="add_new_property">Add New Property</string>
    <string name="remember_check">Remember Me</string>
    <string name="quote1">PROPERTY MANAGEMENT is a property management app for landlords in the smartphone world. Manage
        your rental business and tenants on your Phone -Iron man
    </string>
    <string name="quote2">Now, property managers should be using the latest technology to assist them with their
        property management duties. -SpiderMan
    </string>
    <string name="quote3">Property managers tend to juggle a lot in one day. Do all at one place. -Captain America
    </string>
    <string name="property_details">Property Details</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="sign_out">Sign Out</string>
    <string name="signed_out">Signed out</string>
    <string name="logout">LogOut</string>
    <string name="back_to_document_list">Document List</string>
    <string name="comment">Comment:</string>
    <string name="document_name">Document Name:</string>
    <string name="document_type">Document Type:</string>
    <string name="delete_document">Delete Document</string>

    <string-array name="document_types">
        <item>Lease Agreement</item>
        <item>Application Form</item>
        <item>Three day Notice</item>
        <item>Eviction Notice</item>
        <item>Move Out Form</item>
        <item>Other</item>
    </string-array>
</resources>
