<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.purva.propertymanagment.ui.login.LoginActivity">


    <TextView
        android:id="@+id/textView"
        android:textSize="40dp"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"

        android:gravity="center"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/log_in" />

    <EditText
        android:id="@+id/editTextLoginName"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:hint="Enter User Name"
        android:inputType="textEmailAddress"
        android:paddingLeft="10dp"
        android:textSize="20dp" />
    <LinearLayout
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/editTextLoginPassword"
            android:layout_width="231dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="55dp"
            android:hint="Enter Password"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:textSize="20dp" />
        <ImageButton
            android:id="@+id/micImage"
            android:background="@drawable/mic"
            android:layout_marginLeft="5dp"
            android:layout_width="40dp"
            android:layout_height="40dp" />
    </LinearLayout>

    <CheckBox
        android:layout_marginTop="10dp"
        android:id="@+id/checkRemember"
        android:text="@string/remember_check"
        android:layout_gravity="center"
        android:layout_width="275dp"
        android:layout_height="wrap_content" />


    <Button
        android:layout_marginTop="100dp"
        android:id="@+id/buttonLogin"
        android:textSize="20dp"
        android:layout_gravity="center"
        android:background="@drawable/button_layout_simple"
        android:text="@string/login"
        android:paddingLeft="10dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"

        />
    <Button
        android:layout_marginTop="50dp"
        android:background="@drawable/button_layout_simple"
        android:id="@+id/buttonCreateAcc"
        android:textSize="20dp"
        android:layout_gravity="center"
        android:text="@string/signup_here"
        android:paddingLeft="10dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        />


</LinearLayout>
