<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">
    <android.support.v7.widget.Toolbar
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:orientation="horizontal"
            android:id="@+id/toolbaraddDoc"
            android:minHeight="?attr/actionBarSize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:titleTextColor="@android:color/white"
            android:background="@color/primary">

        <TextView
                android:textColor="@drawable/back_home"
                android:id="@+id/back"
                android:textAlignment="viewStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="Documet Detail"/>
    </android.support.v7.widget.Toolbar>
    <ImageView android:id="@+id/documentImage"
               android:src="@drawable/sample"
               android:layout_width="match_parent"
               android:layout_height="300dp"/>
    <LinearLayout android:layout_margin="12dp"
                  android:layout_width="300dp"
                  android:layout_gravity="center"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal">
        <TextView android:id="@+id/dtype"
                  android:textSize="18dp"
                  android:textStyle="bold"
                  android:text="@string/document_type"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"/>
        <View android:layout_width="4dp"
              android:layout_height="1dp"/>
        <TextView android:id="@+id/dtypeText"
                  android:layout_weight="1"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout android:layout_margin="12dp"
                  android:layout_width="300dp"
                  android:layout_gravity="center"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal">
        <TextView android:id="@+id/dname"
                  android:textSize="18dp"
                  android:textStyle="bold"
                  android:text="@string/document_name"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"/>
        <TextView android:id="@+id/dnameText"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout android:layout_margin="12dp"
                  android:layout_width="300dp"
                  android:layout_gravity="center"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal">
        <TextView android:id="@+id/dcomment"
                  android:textSize="18dp"
                  android:textStyle="bold"
                  android:text="@string/comment"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"/>
        <TextView android:id="@+id/dcommentText"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:gravity="center"
                  android:orientation="horizontal">

        <Button
                android:padding="10dp"

                android:id="@+id/backToList"
                android:background="@drawable/button_layout_simple"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back_to_document_list"/>
        <View android:layout_width="50dp" android:layout_height="1dp"/>
        <Button
                android:padding="10dp"
                android:id="@+id/deleteDoc"
                android:background="@drawable/button_layout_simple"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete_document"/>
    </LinearLayout>
</LinearLayout>
