<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.purva.propertymanagment.ui.home.MainActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:fillViewport="true"
        android:scrollbars = "vertical"
        android:scrollbarStyle="insideInset"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TableLayout

                android:layout_width="match_parent"
                android:layout_height="240dp">

                <TableRow
                    android:layout_gravity="center"
                    android:layout_margin="15dp"
                    >
                    <!--<ImageView
                        android:src="@drawable/alert"
                        android:layout_width="60dp"
                        android:layout_height="60dp">
                    </ImageView>-->

                    <ImageView
                        android:id="@+id/imageProperty"
                        android:layout_marginLeft="70dp"
                        android:src="@drawable/properties"
                        android:layout_width="60dp"
                        android:layout_height="60dp">

                    </ImageView>
                    <ImageView

                        android:layout_marginLeft="100dp"
                        android:src="@drawable/tenant"
                        android:layout_width="60dp"
                        android:layout_height="60dp">

                    </ImageView>
                </TableRow>
                <TableRow
                    android:layout_gravity="center"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    >
                   <!-- <TextView
                        android:text="@string/alerts"
                        android:gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                    </TextView>-->

                    <TextView
                        android:text="@string/properties"
                        android:layout_marginLeft="70dp"
                        android:gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                    </TextView>
                    <TextView
                        android:text="@string/tenants"
                        android:gravity="center"
                        android:layout_marginLeft="100dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                    </TextView>
                </TableRow>
                <TableRow
                    android:layout_gravity="center"
                    android:layout_margin="15dp"
                    >
                    <!--<ImageView
                        android:src="@drawable/transaction"
                        android:layout_width="60dp"
                        android:layout_height="60dp">

                    </ImageView>-->
                    <ImageView

                        android:layout_marginLeft="70dp"
                        android:src="@drawable/collectrent"
                        android:layout_width="60dp"
                        android:layout_height="60dp">

                    </ImageView>
                    <ImageView

                        android:layout_marginLeft="100dp"
                        android:src="@drawable/todo"
                        android:layout_width="60dp"
                        android:layout_height="60dp">

                    </ImageView>
                </TableRow>
                <TableRow
                    android:layout_gravity="center"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    >
                    <!--<TextView
                        android:text="@string/transactions"
                        android:gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                    </TextView>-->

                    <TextView
                        android:text="@string/collect_rent"
                        android:layout_marginLeft="60dp"
                        android:gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                    </TextView>
                    <TextView
                        android:text="@string/to_do_list"
                        android:gravity="center"
                        android:layout_marginLeft="100dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                    </TextView>
                </TableRow>

            </TableLayout>

            <View
                android:layout_marginTop="10dp"
                android:layout_width="350dp"
                android:layout_gravity="center"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_marginLeft="20dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_width="70dp"
                    android:layout_gravity="center"
                    android:src="@drawable/man"
                    android:layout_height="70dp" />

                <TextView
                    android:layout_marginLeft="20dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:text="@string/quote1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />


            </LinearLayout>

            <View
                android:layout_marginTop="10dp"
                android:layout_width="350dp"
                android:layout_gravity="center"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:orientation="horizontal">

                <ImageView
                    android:layout_marginLeft="20dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_width="70dp"
                    android:layout_gravity="center"
                    android:src="@drawable/spider"
                    android:layout_height="70dp" />

                <TextView
                    android:layout_marginLeft="20dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center"
                    android:layout_marginRight="10dp"
                    android:gravity="center"
                    android:text="@string/quote2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />


            </LinearLayout>


            <View
                android:layout_marginTop="10dp"
                android:layout_width="350dp"
                android:layout_gravity="center"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_marginLeft="20dp"
                    android:layout_marginBottom="10dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_width="70dp"
                    android:src="@drawable/captain"
                    android:layout_height="70dp" />

                <TextView
                    android:layout_marginLeft="20dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/quote3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />


            </LinearLayout>


            <View
                android:layout_marginTop="10dp"
                android:layout_width="350dp"
                android:layout_gravity="center"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_marginLeft="20dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center"
                    android:layout_width="70dp"
                    android:src="@drawable/doctor"
                    android:layout_height="70dp" />

                <TextView
                    android:layout_marginLeft="20dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="No matter where you are, you can manage your properties easily. -Doctor Strange"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />


            </LinearLayout>
            <View
                android:layout_marginTop="10dp"
                android:layout_width="350dp"
                android:layout_gravity="center"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

            <com.github.mikephil.charting.charts.PieChart
                android:layout_marginTop="30dp"
                android:layout_gravity="center"
                android:id="@+id/pieChart"
                android:layout_width="300dp"
                android:layout_height="300dp">

            </com.github.mikephil.charting.charts.PieChart>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
